--- a/Assets/04_UI/04.02_Stylesheets/UIstyle.uss
+++ b/Assets/04_UI/04.02_Stylesheets/UIstyle.uss
@@ -174,13 +174,41 @@
     border-left-width: 0;
     background-color: rgba(56, 56, 56, 0);
     background-image: url('project://database/Assets/04_UI/04.04_UIsprites/04.04.01_StartScreenButton.png?fileID=2800000&guid=8714867624fc94542ad4331ce978b33e&type=3#04.04.01_StartScreenButton');
-    font-size: 12px;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/04_UI/04.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.01_Technos-PKDZP%20SDF.asset?fileID=11400000&guid=defeed33c567cbe468b27c7fb685d691&type=2#Technos-PKDZP SDF');
     width: 100%;
 }
 
+.wabe-col {
+    flex-grow: 1;
+    height: 100%;
+    width: 50%;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
 .menu-button-wrapper {
     flex-grow: 0;
     width: 70%;
+}
+
+.wabe {
+    flex-grow: 0;
+    background-image: url('project://database/Assets/04_UI/04.04_UIsprites/04.04.14_CharacterUIWabe.png?fileID=2800000&guid=8d08cb82fbd5d9d4798d2e56b664c988&type=3#04.04.14_CharacterUIWabe');
+    -unity-background-scale-mode: scale-to-fit;
+    width: 40%;
+    height: 18%;
+}
+
+.healpoint {
+    flex-grow: 0;
+    background-color: rgb(255, 255, 255);
+    width: 2%;
+}
+
+.healpoint-empty {
+    background-color: rgba(255, 255, 255, 0.47);
 }
