--- a/Assets/06_UI/07.03_Stylesheets/startScreenStyle.uss
+++ b/Assets/06_UI/07.03_Stylesheets/startScreenStyle.uss
@@ -1,7 +1,7 @@
 .button {
-    -unity-font-definition: url('project://database/Assets/04_UI/04.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.01_Technos-PKDZP%20SDF.asset?fileID=11400000&guid=defeed33c567cbe468b27c7fb685d691&type=2#Technos-PKDZP SDF');
+    -unity-font-definition: url('project://database/Assets/06_UI/07.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.asset?fileID=11400000&guid=20f94410735f6d545b74cf9b618f300d&type=2#04.01.04');
     font-size: 20px;
-    background-image: url('project://database/Assets/04_UI/04.04_UIsprites/04.04.01_StartScreenButton.png?fileID=2800000&guid=8714867624fc94542ad4331ce978b33e&type=3#04.04.01_StartScreenButton');
+    background-image: url('project://database/Assets/06_UI/07.05_Sprites/StartScreenButton.png?fileID=2800000&guid=cd8a8b4f6983e7e4bbf1598c1b51e804&type=3#StartScreenButton');
     -unity-background-image-tint-color: rgb(255, 255, 255);
     background-color: rgba(0, 0, 0, 0);
     color: rgb(255, 255, 255);
@@ -12,12 +12,13 @@
     margin-top: 1.5%;
     min-width: 15%;
     transition-duration: 0.2s;
+    -unity-background-scale-mode: stretch-to-fill;
 }
 
 .button:hover {
-    -unity-font-definition: url('project://database/Assets/04_UI/04.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.01_Technos-PKDZP%20SDF.asset?fileID=11400000&guid=defeed33c567cbe468b27c7fb685d691&type=2#Technos-PKDZP SDF');
+    -unity-font-definition: url('project://database/Assets/06_UI/07.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.asset?fileID=11400000&guid=20f94410735f6d545b74cf9b618f300d&type=2#04.01.04');
     font-size: 20px;
-    background-image: url('project://database/Assets/04_UI/04.04_UIsprites/04.04.10_ButtonHover.png?fileID=2800000&guid=bcb9424755989724d8d24c640ecbb802&type=3#04.04.10_ButtonHover');
+    background-image: url('project://database/Assets/06_UI/07.05_Sprites/ButtonHover.png?fileID=2800000&guid=d849c1dcc85f7304ca6768697f2de11f&type=3#ButtonHover');
     -unity-background-image-tint-color: rgb(255, 255, 255);
     background-color: rgba(0, 0, 0, 0);
     color: rgb(255, 255, 255);
