--- a/Assets/06_UI/07.03_Stylesheets/startScreenStyle.uss
+++ b/Assets/06_UI/07.03_Stylesheets/startScreenStyle.uss
@@ -29,3 +29,57 @@
     margin-top: 1.5%;
     min-width: 15%;
 }
+
+.victoryButton {
+    position: absolute;
+    width: 20%;
+    background-image: url('project://database/Assets/06_UI/07.05_Sprites/StartScreenButtonBlack.png?fileID=2800000&guid=2511b147b3fc71c46817d0557bbe97da&type=3#StartScreenButtonBlack');
+    background-color: rgba(56, 56, 56, 0);
+    padding-top: 1.5%;
+    padding-right: 0;
+    padding-bottom: 1.5%;
+    padding-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    font-size: 20px;
+    -unity-font-definition: url('project://database/Assets/06_UI/07.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.asset?fileID=11400000&guid=20f94410735f6d545b74cf9b618f300d&type=2#04.01.04');
+    color: rgb(255, 255, 255);
+    top: 90%;
+    left: 50%;
+    transition-duration: 0.2s;
+    translate: -50% -50%;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+}
+
+.victoryButton:hover {
+    position: absolute;
+    width: 20%;
+    background-image: url('project://database/Assets/06_UI/07.05_Sprites/StartScreenButtonBlack.png?fileID=2800000&guid=2511b147b3fc71c46817d0557bbe97da&type=3#StartScreenButtonBlack');
+    background-color: rgba(255, 255, 255, 0);
+    padding-top: 1.5%;
+    padding-right: 0;
+    padding-bottom: 1.5%;
+    padding-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    font-size: 20px;
+    -unity-font-definition: url('project://database/Assets/06_UI/07.01_Fonts/04.01.04_Technos-PKDZP/04.01.04.asset?fileID=11400000&guid=20f94410735f6d545b74cf9b618f300d&type=2#04.01.04');
+    color: rgb(144, 144, 144);
+    top: 90%;
+    left: 50%;
+    transition-duration: 0.2s;
+    translate: -50% -50%;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    -unity-background-image-tint-color: rgb(45, 45, 45);
+}
